Kun en av adressetypene er påkrevd i SED-er
Kun en av bostedsadresse, kontaktadresse eller oppholdsadresse er
påkrevd i SED-er.